# scatterping

./: Makefile  README.md  pyproject.toml  script.py
.github/workflows/: test.yml
scatterping/: __init__.py  braille.py
scatterping/map/: __init__.py
tests/: test_braille.py
