[tool.poetry]
name = "scatterping"
version = "0.1.0"
description = "A tool to test response time from all around the world with AWS Lambdas"
authors = ["Axel <scatterping@absalon.is>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
