[tool.poetry]
name = "scatterping"
version = "0.1.0"
description = "A tool to test response time from all around the world with AWS Lambdas"
authors = ["Axel <scatterping@absalon.is>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.11.8"
httpx = "^0.11.1"
svglib = "^0.9.3"
drawille = "^0.1.0"

[tool.poetry.dev-dependencies]
mypy-boto3-lambda = "^1.11.7"
ipython = "^7.12.0"
pdbpp = "^0.10.2"
ipdb = "^0.12.3"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.761"
flake8 = "^3.7.9"
flake8-builtins = "^1.4.2"
flake8-isort = "^2.8.0"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.1.1"
flake8-comprehensions = "^3.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
